# ai-python-basic-exercises

./: .env.example  .gitignore  CLAUDE.md  basic_chat.py  basic_model.py  email_summary.py  groq.py  groq_test.py  local_llm.py  product_revenue.py  pyproject.toml  questions_and_answers.py  read_and_write_csv.py  readme.md  reviews.py  reviews_challenge.py  reviews_final_challenge.py  test_local_service.py
content/: emails.txt
data/raw/: questions.txt  reviews.csv
exercises/: average_list.py  dictionary.py  email_summary.py  read_csv.py
exercises/pandas/: products.py  reviews_challenge.py
services/: __init__.py  gemini_service.py  local_llm_service.py
src/ai_exercises/: paths.py
src/ai_exercises/exercises/: basic_chat.py  basic_model.py  email_summary.py  groq_chat.py  local_llm.py  product_revenue.py  questions_and_answers.py  reviews.py  reviews_challenge.py
src/ai_exercises/services/: __init__.py  base.py  gemini_service.py  groq_service.py  local_llm_service.py
tests/: test_local_llm_service.py  test_product_revenue.py  test_reviews_challenge.py
